is that a MOTHER FUCKING Turkey commit? Yes. yes it is

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -2,22 +2,22 @@
   ##########################
   # PARTIES
   ##########################
-  TUR_jc_party:0 "Türk Devrimci Cephesi - Radikaller"
-  TUR_jc_party_long:0 "The Turkish Revolutionary Front - Radicals"
-  TUR_ss_party:0 "Türk Devrimci Cephesi - Ilımlılar"
-  TUR_ss_party_long:0 "The Turkish Revolutionary Front - Moderates"
+  TUR_jc_party:0 "Cumhuriyet Halk Partisi"
+  TUR_jc_party_long:0 "Republican People's Party"
+  TUR_ss_party:0 "Resistance"
+  TUR_ss_party_long:0 "Turkish Resistance to Russian Occupation"
   TUR_lb_party:0 "Serbest Cumhuriyet Fırkası"
-  TUR_lb_party_long:0 "The Liberal Republic Party"
-  TUR_cn_party:0 "Ulusal Demokratlar"
-  TUR_cn_party_long:0 "The National Democrats"
-  TUR_rc_party:0 "Türk cephesi"
-  TUR_rc_party_long:0 "The Turkish front"
-  TUR_an_party:0 "Özgürlük ve Uyum Partisi"
-  TUR_an_party_long:0 "The Freedom and Accord Party"
-  TUR_ds_party:0 "İmparatorluk Grubu"
-  TUR_ds_party_long:0 "The Imperial Clique"
-  TUR_ni_party:0 "Turanist Ligi"
-  TUR_ni_party_long:0 "The Turanist League"
+  TUR_lb_party_long:0 "The Liberal Republican Party"
+  TUR_cn_party:0 "Demokrat Parti"
+  TUR_cn_party_long:0 "The Democrat Party"
+  TUR_an_party:0 "Türk İş Dünyası İttifakı"
+  TUR_an_party_long:0 "The Alliance of Turkish Business"
+  TUR_rc_party:0 "Yeni Türkiye Ligi"
+  TUR_rc_party_long:0 "The New Turkish League"
+  TUR_ds_party:0 "Türk İşgal Konseyi"
+  TUR_ds_party_long:0 "Council of Turkish Occupation"
+  TUR_ni_party:0 "Turancılar Ligi"
+  TUR_ni_party_long:0 "League of Turanists"
 
   ##########################
   # NAMES
@@ -89,178 +89,18 @@
   ##########################
   # STARTING IDEAS
   PB_TUR_Iron_Fist:0 "The Iron Fist of Izzet"
-  PB_TUR_Iron_Fist_desc:0 "General Ahmed Izzet Pasha took power in 1925 as an “emergency” leader, but his provisional dictatorship has remained in power since. Izzet’s strong grip over the country is still felt, even in 1933, despite his failing health and increasing inability to control national politics."
-  PB_TUR_Vestigial_Empire:0 "Vestigial Empire"
-  PB_TUR_Vestigial_Empire_desc:0 "The Ottomans are an empire in name only, with the only real remnants being in portions of Syria and Kurdistan. Rampant corruption, poverty and political instability grow like wildfire in the country. Though the Caliph still remains, his power is solely dictated by the military junta."
-  PB_TUR_Economic_Collapse:0 "Total Economic Collapse"
-  PB_TUR_Economic_Collapse_desc:0 "The Ottoman economy has been in a state of near total collapse for years, thanks in part to the global economic downturn and the mismanagement of the Arab revolt. Foreign investment is nonexistent, and very few can afford anything beyond the most basic necessities"
-  PB_TUR_Caliph_of_Islam:0 "The Caliph of Islam"
+  PB_TUR_Iron_Fist_desc:0 "Marshal Ahmed Izzet Pasha and others like him have ruled Turkey for almost seventy years as demanded by our Russian overlords, whilst no saint the Marshal is one of the best collaborators the regime has seen in quite some time."
+  PB_TUR_Caliph_of_Islam:0 "The 'Caliph' of Islam"
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
-  TUR_five_year_plan_preperation_idea:0 "Five Year Plan Preparation"
-  TUR_five_year_plan_idea:0 "The Turkish Five Year Plan"
-  TUR_restored_peace_idea:0 "Restored Peace"
-
-  # TURKISH CIVIL WAR
-
-  TUR_march_soldiers_idea:0 "March Soldiers"
-  TUR_we_fight_for_turkey_idea:0 "We Fight for Turkey"
-  TUR_time_is_of_the_essence_idea:0 "Time is of the Essence"
-  TUR_steel_warriors_of_turkey:0 "Steel Warriors of Turkey"
-  TUR_work_for_turkey_idea:0 "Work for Turkey"
-  TUR_brave_warriors_of_turkey_idea:0 "Brave Warriors of Turkey"
-  PB_TUR_istanbul_riots:0 "The Istanbul Riots"
-  TUR_honourable_fakhri:0 "Honourable Fakhri"
-  TUR_valiant_battle:0 "Valiant Battle"
-  PB_TUR_desperate_battle1:0 "Desperate Battle"
-  PB_TUR_desperate_battle2:0 "Desperate Battle"
-  PB_TUR_desperate_battle3:0 "Desperate Battle"
-  PB_TUR_desperate_battle4:0 "Desperate Battle"
-  PB_TUR_desperate_battle5:0 "Desperate Battle"
-  PB_TUR_turkish_spring1:0 "The Turkish Spring"
-  PB_TUR_turkish_spring2:0 "The Turkish Spring"
-  PB_TUR_turkish_spring3:0 "The Turkish Spring"
-  PB_TUR_turkish_spring4:0 "The Turkish Spring"
-  PB_TUR_turkish_spring5:0 "The Turkish Spring"
-
-  # POST TURKISH CIVIL WAR
-
-  PB_TUR_Turkish_Civil_War_Recovery:0 "Recovering from the Civil War"
-
-  # CONSEQUENCES OF THE SLUMP SHITE
-  PB_TUR_Recovered_Economy:0 "Recovered Economy"
-  TUR_turkish_worker_regiment1_idea:0 "Turkish Worker Regiment"
 
   ##########################
   # FOCUSES
   ##########################
   # Inital Tree
-  TUR_dictatorship_of_ahmed_izzet_pasha:0 "The Dictatorship of Ahmed Izzet Pasha"
-  TUR_commence_the_repairs:0 "Commence The Recouperation"
-  TUR_the_ottoman_shield:0 "The Ottoman Shield"
-  TUR_the_protege:0 "The Protégé"
-  TUR_observe_the_north:0 "Observe The North"
-  TUR_call_the_meeting:0 "Call The Meeting"
-  TUR_secure_the_borders:0 "Secure The Borders"
-  TUR_secure_the_interior:0 "Secure The Interior"
-  TUR_a_war_masters_touch:0 "A War Master's Touch"
-  TUR_the_five_year_plan:0 "The Five Year Plan"
-  TUR_commence_preperations:0 "Commence Preperations"
-  TUR_connect_the_empire:0 "Connect The Empire"
-  TUR_placiate_the_left:0 "Placiate The Left"
-  TUR_nobody_left_behind:0 "Nobody Left Behind"
-  TUR_commence_the_plan:0 "Commence The Plan"
-  TUR_hope_it_works:0 "Hope it Works"
-  TUR_address_istanbul:0 "Address Istanbul..."
-  TUR_with_no_mercy:0 "With No Mercy"
-  TUR_no_mercy_for_the_left:0 "Destory This Farce"
-  TUR_rebuild_property:0 "Rebuild Damaged Property"
-  TUR_we_are_heroes:0 "A Job Welldone"
-  TUR_with_mercy:0 "With Mercy"
-  TUR_diplomats_tact:0 "A Diplomat's Tact"
-  TUR_encourge_rapprochement:0 "Encourge Rapprochement..."
-  TUR_with_golden_dagger:0 "With A Golden Dagger"
-  TUR_calmer_instanbul:0 "A Calmer Instanbul"
-  TUR_look_forward:0 "Looking Forward"
-  TUR_a_desperate_fight_no_more:0 "A Desperate Fight No More"
-  # Civil War Tree
-  TUR_the_turkish_civil_war:0 "The Turkish Civil War"
-  TUR_contacting_the_british:0 "Contacting The British"
-  TUR_request_further_support:0 "Request Furhter Support"
-  TUR_call_upon_the_people:0 "Call Upon the People"
-  TUR_march_soldiers:0 "March Soldiers"
-  TUR_a_puppet_king_no_more:0 "A Puppet King No More"
-  TUR_we_fight_for_turkey:0 "We Fight For Turkey!"
-  TUR_reactivate_the_defences:0 "Reactivate The Defences"
-  TUR_scavange_old_equipment:0 "Scavange Old Equipment"
-  TUR_mobolise_the_men:0 "Mobolise The Men"
-  TUR_ask_armenia_for_access:0 "Ask Armenia For Military Access"
-  TUR_time_is_of_the_essence:0 "Time is of the Essence"
-  TUR_steel_your_hearts:0 "Steel Your Hearts!"
-  TUR_work_for_turkey:0 "Work for Turkey"
-  TUR_onwards:0 "Onwards!"
-  TUR_the_search_for_fakhri_pasha:0 "The Search for Fakhri Pasha"
-  TUR_oh_honourable_fakhri:0 "Oh Honourable Fakhri"
- 
+
   ##########################
   # EVENTS
   ##########################
-  turkey_inital.1.t:0 "The Dictator of Turkey"
-  turkey_inital.1.a:0 "For Turkey!"
-  turkey_inital.2.t:0 "Forming The Taskforce"
-  turkey_inital.2.a:0 "Soon the people will live like they once did."
-  turkey_inital.3.t:0 "Observing the Torun"
-  turkey_inital.3.a:0 "Peace at Home, Peace in the World."
-  turkey_inital.4.t:0 "The Protégé"
-  turkey_inital.4.a:0 "Turkey will never falter again."
-  turkey_inital.5.t:0 "The Doctrinal Debate"
-  turkey_inital.5.a:0 "Throwing Shells will keep our men safe."
-  turkey_inital.5.b:0 "Only a Grand Statergy will keep our men safe."
-  turkey_inital.5.c:0 "We can only overwhelm the enemy with numbers."
-  turkey_inital.5.e:0 "Metal and blood will keep us going."
-  turkey_inital.6.t:0 "The First Five Year Plan"
-  turkey_inital.6.a:0 "Soon all will live in utopia."
-  turkey_inital.7.t:0 "The Istanbul Situation"
-  turkey_inital.7.a:0 "Call in the Military."
-  turkey_inital.7.b:0 "Prepare a peaceful resolution."
-  turkey_inital.8.t:0 "Meeting With the Rioters"
-  turkey_inital.8.a:0 "Perhaps there will be peace?"
-  turkey_flavour.1000.t:0 "DIRTY CHEATER"
-  turkey_flavour.1000.a:0 "GO PLAY THE GAME NORMALY, or don't tbh i don't really like HOI4 gameplay that much, but really it is up to you I'm not some up my own ass game dev who demands you to play the game 'the intended way'"
-  turkey.1.t:0 "The Death of Izzet Pasha"
-  turkey.1.d:0 "Ahmed Izzet Pasha, the dictator of the Ottoman Empire and head of the military junta since 1925, was found dead in his office this morning. Pasha's legacy is a controversial one, with his choice to overthrow the civilian government eight years ago has been both supported and criticized. The Pasha Junta's decision to seek terms with the United Arab Emirates marked the official end of the Ottoman Empire as the hegemony of the Middle East. For many, the collapse of Ottoman rule has been a near constant downward spiral only exacerbated by the end of what tepid democracy the Empire had.\n\nWith Pasha's death, the last tenuous thread holding the Empire together has been cut. What would be an unremarkable state funeral under normal cirucumstances has become a moment of genuine grief and uncertainty amongst the populace. Reports have already begun to reach the Sublime Porte of Jacobin riots on the coast, while Armenian and Kurdish partisans have begun organizing the inevitable breakdown of civil authority. Already Fevzi Cakmak has made his move and has claimed his teachers's place for himself, whether he is able to sufficently combat this growing crisis is unknown to all."
-  turkey.1.a:0 "The Empire trembles..."
-  turkey.2.t:0 "The Red Menace"
-  turkey.2.a:0 "Where is the army!?"
-  turkey.3.t:0 "Fleeing East"
-  turkey.3.a:0 "We shall return soon enough."
-  turkey.4.t:0 "Silence from Ankara"
-  turkey.4.a:0 "Another problem."
-  turkey.5.t:0 "The Nationalist Meance"
-  turkey.5.a:0 "They are coming."
-  turkey.6.t:0 "Remnant Forces sieze West Thrace"
-  turkey.6.d:0 "As the Empire continues into a death spiral, there are some positive developments. In the Thrace territories, loyalists to the Sultan were able to rally the garrison to prevent a nationalist takeover. Though loyalists remain in control of the region, their disconnect from our forces prompted the formation of a provisional autonomous government. Ali Şükrü Paşa, elected by emergency ballot, declared the formation of the \"Neutral Zone of West Thrace.\"\n\nPaşa has affirmed his loyalty to the Ottoman Sultan, stating that once the rebellion has been defeated, he will dissolve the provisional government and return to the Empire. In the meantime, it's necessary that we declare our intention to protect these lands from outside forces. Given that both Greece and Bulgaria have ambitions there, a declaration that any intervention will bring war should prevent any opportunism for the time being."
-  turkey.6.a:0 "West Thrace will be safe."
-  turkey.6.b:0 "[WTA.GetFlag] §YTo the neutral zone!§!"
-  turkey.7.t:0 "The Separatists"
-  turkey.7.a:0 "Your freedom will be temporary."
-  turkey.8.t:0 "Kardeşler Savaşı"
-  turkey.8.d:0 "Who could have though the collapse of order from the death of Izzet Pasah could have been so disastrous. With nationalist and Ottoman forces clashing over major cities, chaos erupted in the West as Jacobin and Bakuninist militias began mobilizing against both forces. Across the Empire, political violence has overthrown whatever semblance of calm that once existed. There can be no doubt at this point that Turkey is in the midst of full blown rebellion.\n\nThe fighting has come to be called Kardeşler Savaşı, or the Brother War, and it would be difficult to find a more apt name. As last remnants of the Ottoman Empire burn to the ground, the loyalists have been forced into the Northernmost provinces bordering the Black Sea. In the East, Armenian and Kurdish partisans are taking up positions to defend their homes in the coming conflict. In the West, Greece eyes the now vulnerable coast, their dreams of Megali tantalizingly close. Only incredible violence will determine the winner of this conflict, and whomever remains will be the kings of little more than corpses and ash."
-  turkey.8.a:0 "We shall endure!"
-  turkey.8.b:0 "It is time we take back out destiny!"
-  turkey.8.c:0 "For the people!"
-  turkey.9.t:0 "The Brothers War Begins."
-  turkey.9.a:0 "To War!"
-  turkish_civilwar.0.t:0 "Kurdish Militia Join Us!"
-  turkish_civilwar.0.a:0 "Another step towards unification."
-  turkish_civilwar.1.t:0 "A Request From Turkey"
-  turkish_civilwar.1.a:0 "They shall receive."
-  turkish_civilwar.1.b:0 "It's best we stay out of this."
-  turkish_civilwar.2.t:0 "The British accept!"
-  turkish_civilwar.2.a:0 "A toast to our friends in the Isles!"
-  turkish_civilwar.3.t:0 "The British Decline"
-  turkish_civilwar.3.a:0 "Damn!"
-  turkish_civilwar.4.t:0 "A Second Request"
-  turkish_civilwar.4.a:0 "The fight for order is universial."
-  turkish_civilwar.4.b:0 "Not this time."
-  turkish_civilwar.5.t:0 "More Support From Britain"
-  turkish_civilwar.5.a:0 "This time success will be ours."
-  turkish_civilwar.6.t:0 "The British Decline"
-  turkish_civilwar.6.a:0 "Perhaps we pushed for too hard?"
-  turkish_civilwar.7.t:0 "The Turkish ask for access"
-  turkish_civilwar.7.a:0 "What's the worse that could happen?"
-  turkish_civilwar.7.b:0 "No."
-  turkish_civilwar.8.t:0 "The Armenians Give us Military Access"
-  turkish_civilwar.8.a:0 "A great victory indeed!"
-  turkish_civilwar.9.t:0 "The Armenians refuse to give us Military Access"
-  turkish_civilwar.9.a:0 "Damn!"
-  turkish_civilwar.10.t:0 "The Search for Fakhri Pasha"
-  turkish_civilwar.10.a:0 "Let the hunt begin!"
-  turkish_civilwar.10.b:0 "We don't have the time."
-  turkish_civilwar.11.t:0 "Furthered Search for Fakhri Pasha"
-  turkish_civilwar.11.a:0 "We still have a chance."
-  turkish_civilwar.11.b:0 "We should quit now."
-  turkish_civilwar.100.t:0 "Fakhri Pasha has been found!"
-  turkish_civilwar.100.a:0 "Huzzah!"
 
 
   
@@ -269,65 +109,18 @@
   ##########################
   # TOOLTIPS
   ##########################
-  TUR_commence_slump_stuff:0 "§YDecsions will be unlocked that will allow us to respond to the economic crisis.§!"
-  TUR_secure_the_borders_tt:0 "§YBunkers will be constructed at key points on our borders.§!"
-  TUR_secure_the_interior_tt:0 "§YBunkers will be constructed at key points all around the nation.§!"
-  TUR_placiate_the_left_tt:0 "§YThe Recovery will decrease by §!§R10%§!\n§YThe People's happiness will increase by §!§G15%§!"
-  TUR_look_forward_inital_tt:0 "§YTurkey will enter into a new golden age!§!"
-  TUR_hope_it_works_tt:0 "§YThe Recovery will increase by §!§G10%§!"
-  OTT_Turkish_Civil_War_tooltip:0 "§YYou will remain as the Ottoman Empire§!\n\n"
-  NTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Nationalist Turkey§!\n\n"
-  RTR_Turkish_Civil_War_tooltip:0 "§YYou will switch to Revolutionary Turkey§!\n\n"
-  TUR_a_puppet_king_no_more_tt:0 "§YThis will be a temporary measure, when this is over his powers will be diminished again§!"
-  TUR_reactivate_the_defences_tt:0 "§YDepending on how much of our original territory we still have will impact this descision§!"
-
-  # DECISIONS STUFF
-  TUR_slump_full:0 "§GOur Economy has fully recovered§!"
-  TUR_slump_reissue:0 "The People have a happiness of 60% or higher"
-  TUR_slump_fifteen_happiness:0 "The People have a happiness of 15% or higher"
-  TUR_slump_ten_recovery_happiness:0 "The People have a happiness of 10% or higher"
-  TUR_slump_twenty_recovery:0 "We have recovered 20% or more of the economy"
-  TUR_slump_ten_recovery:0 "We have recovered 10% or more of the economy"
-  PB_TUR_issue_new_currency_tt:0 "§YThe Recovery will increase by §!§G45%§!\n§YThe People's happiness will decrease by §!§R60%§!"
-  PB_TUR_create_turkish_worker_regiment_tt:0 "§YThe Recovery will increase by §!§G10%§!\n§YThe People's happiness will decrease by §!§R15%§!"
-  PB_TUR_get_rid_of_the_regiments_tt:0 "§YThe Recovery will decrease by §!§R20%§!\n§YThe People's happiness will decrease by §!§G25%§!"
-  PB_TUR_deregulate_the_economy_tt:0 "§YThe Recovery will increase by §!§G15%§!\n§YThe People's happiness will decrease by §!§R10%§!"
-  PB_TUR_regulate_the_economy_tt:0 "§YThe Recovery will decrease by §!§R10%§!\n§YThe People's happiness will increase by §!§G15%§!"
-
   
 
   ##########################
   # DECISIONS
   ##########################
-  PB_TUR_slump_recovery:0 "The Consequences of 'The Slump'"
-  PB_TUR_slump_recovery_desc:0 "\n\n\n\n\n\nWhen The Great War ended people finally thought that at long last peace would return to The World, oh how they were so wrong. §Y“The Great Slump”§! as it was called virtually destroyed neigh every nation’s economy but among the worst hit by this was the neutral Turkey, foreign investors left in droves, people could barely feed themselves let alone their families, it is about time we started to seriously think about getting out of this dreadful sump one way or another. How we choose to deal with this crisis could have potential §Rconsequences§! should the people wish to forsake our unity in the name of §Rtheir preferred ideologue.§!\n\n§YEconomic recovery:§! How far our measures have gone to restore the economy to pre slump levels?\n§YHappiness of The People:§! The current appetite of the people for further reform and change.\n§YCurrent Economic Trajectory:§! In the event of a civil war or some other equally calamitous event, how will our economy look?\n§YCurrent Opinion Trajectory:§! In the event of a civil war or some other equally calamitous event, how will our people view us? And how willing are the people to accept further reform.\n§YEconomic Recovery:§! [?TUR_slump_recovery]%\n§YHappiness of The People:§! [?TUR_slump_happiness]%§!\nCurrent Economic Trajectory:§! [get_TUR_economic_trajectory]\n§YCurrent Opinion Trajectory:§! [get_TUR_opinion_trajectory]"
-  PB_TUR_repair_the_economy:0 "Repair The Economy"
-  PB_TUR_issue_new_currency:0 "Issue New Currency"
-  PB_TUR_create_turkish_worker_regiment:0 "Create the Turkish Worker Regiment"
-  PB_TUR_get_rid_of_the_regiments:0 "Disband the Regiments"
-  PB_TUR_deregulate_the_economy:0 "Deregulate the Economy"
-  PB_TUR_regulate_the_economy:0 "Regulate the Economy"
 
 
   ##########################
   # SCRIPTED LOC
   ##########################
-  TUR_disaster_economic_trajectory:0 "§RDISASTER§!"
-  TUR_minor_disaster_economic_trajectory:0 "§RMinor Disaster§!"
-  TUR_moderate_economic_trajectory:0 "Moderate"
-  TUR_minor_success_economic_trajectory:0 "§GMinor Success§!"
-  TUR_success_economic_trajectory:0 "§GSUCCESS§!"
-  TUR_terrible_slump_happiness:0 "§RTERRIBLE§!"
-  TUR_bad_slump_happiness:0 "§RBad§!"
-  TUR_moderate_slump_happiness:0 "Moderate"
-  TUR_good_slump_happiness:0 "§GGood§!"
-  TUR_great_slump_happiness:0 "§GGREAT§"
 
 
   ##########################
   # FLAGS
   ##########################
-  TUR_izzet_dying_bro:0 " §RA Crisis is occuring§!"
-  TUR_economy_fully_fixed:0 "§GThe Economy has been completly restored§!"
-  TUR_ENG_helped_us:0 "The Empire has helped us already"
-  TUR_found_fakhri_pasha:0 "We have found Fakhi Pasha"
