--- a/localisation/PB_state_names_l_english.yml
+++ b/localisation/PB_state_names_l_english.yml
@@ -47,7 +47,7 @@
  STATE_46:0 "Muntenia"
  STATE_47:0 "Thessaly"
  STATE_48:0 "Sofia"
- STATE_49:0 "Ankara"
+ STATE_49:0 "Osman"
  STATE_50:0 "Württemberg"
  STATE_51:0 "Rhineland"
  STATE_52:0 "Oberbayern"
