--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -105,7 +105,7 @@
  VICTORY_POINTS_4109:0 "Athens"
  VICTORY_POINTS_9940:0 "Heraklion"
  VICTORY_POINTS_11818:0 "Thessaloniki"
- VICTORY_POINTS_11747:0 "Ankara"
+ VICTORY_POINTS_11747:0 "Osman"
  VICTORY_POINTS_9833:0 "Istanbul"
  VICTORY_POINTS_940:0 "Konya"
  VICTORY_POINTS_947:0 "Bursa"
