Loc for Russian Starting Ideas

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -23,64 +23,16 @@
   ##########################
   # IDEAS
   ##########################
-  
-  PB_RUS_German_Workers:0 "German Workers"
-  PB_RUS_Fort_Constructions:0 "Fort Constructions"
-  PB_RUS_Mixed_Nation:0 "A Nation Divided"
-  PB_RUS_Mixed_Nation_desc:0 "Russia for all it's history has remained a state united by luck. It's people have no loyalties to their overlords in Moscow and unless significant change occures then it shall stay that way or become something worse." 
-  PB_RUS_Bitter_Revanchism:0 "Bitter Revanchism"
-  PB_RUS_Bitter_Revanchism_desc:0 "The Tsar and his people blame their former Allies of Britain and Germany for all their countries woes and the Current Government encourages this thought religiously.\n\n§R---If Petrograd, Moscow, and Tsaritsyn fall we will witness the collapse of Russia---§!"
-  PB_RUS_Russian_Nightmare:0 "The Russian Nightmare"
-  PB_RUS_Russian_Nightmare_desc:0 "From the frozen wastes of Siberia to the wheat fields of Ukraine there is an almost silent voice of protest against the Tsar's absolutist rule. Political enemies are large in number and even his closest allies would rather see him expelled from government."
-  PB_RUS_Youth:0 "Youth Indoctrination"
-  PB_RUS_Propaganda:0 "24-7 Propaganda"
-  PB_RUS_Re_Education_Camps:0 "Re-Education Camps"
-  PB_RUS_Oaths_Of_Loyalty:0 "Oaths Of Loyalty"
-  PB_RUS_Okhrana_Investments:0 "Okhrana Investments"
-  PB_RUS_Police_State:0 "The Russian Police State"
-  PB_RUS_Gold_Standard:0 "Abandoning The Gold Standard"
-  PB_RUS_Harsh_Quotas:0 "Harsh Quotas"
-  PB_RUS_Foreign_Equipment:0 "A Modernising Industry"
-  PB_RUS_Tank_Production:0 "Tank Production Focuses"
-  PB_RUS_Grey:0 "The Grey Initiative"
-  PB_RUS_A_State_Under_Construction:0 "A State Under Construction"
-  PB_RUS_A_State_Under_Construction_desc:0 "Times are changing. The Russia we once knew and loved has ceased to exist. Around every street corner stands a man in black. He is silent. He is undisturbed. Though stands watching every move, breath, and thought our soul inhabits."
-  PB_RUS_Brain_Drain:0 "Crippling Brain Drain"
-  PB_RUS_Brain_Drain_desc:0 "§RIt is highly recommended that you deal with this debuff as soon as possible.§!"
-  PB_RUS_Die_For_Russia:0 "Die For Russia"
-  PB_RUS_Encourage_War_Room_Debates:0 "Encourage War Room Debates"
-  PB_RUS_Encourage_War_Room_Debates2:0 "Encourage War Room Debates"
-  PB_RUS_Church_Estates:0 "Church Estates"
-  PB_RUS_Violent_Unrest:0 "Violent Unrest"
-  PB_RUS_Police_State2:0 "The Russian Police State"
-  PB_RUS_Air_Supremacy:0 "Air Supremacy Doctrine"
-  PB_RUS_Floating_Airfields_And_Underwater_Wolf_Packs:0 "Floating Airfields And Underwater Wolf Packs"
-  PB_RUS_Floating_Airfields_And_Underwater_Wolf_Packs2:0 "Floating Airfields And Underwater Wolf Packs"
-  PB_RUS_Okhrana_Divisions:0 "Frontline Okhrana Divisions"
-  PB_RUS_Make_The_Gears_Turn:0 "Make The Gears Turn"
-  PB_RUS_Nationalising_Industry:0 "Nationalising Industry"
-  PB_RUS_Open_Contracts:0 "Open Contracts"
-  PB_RUS_All_In:0 "All In"
-  PB_RUS_Sharpen_Bayonets:0 "Sharpen Bayonets"  
-  PB_RUS_Sharpen_Bayonets2:0 "Sharpen Bayonets"
-  PB_RUS_Eat_The_Earth_Doctrine:0 "Eat The Earth Doctrine"
-  PB_RUS_Floating_Behemoths_And_Loyal_Dogs:0 "Floating Behemoths And Loyal Dogs"
-  PB_RUS_Floating_Behemoths_And_Loyal_Dogs2:0 "Floating Behemoths And Loyal Dogs"
-  PB_RUS_The_Army_Knows_Best:0 "The Army Knows Best"
-  PB_RUS_Violent_Unrest2:0 "Subdued Unrest"
-  PB_RUS_the_foundations_of_a_utopia:0 "Foundations Of A Utopia"
-  PB_RUS_the_foundations_of_a_dystopia:0 "Foundations Of A Dystopia"
-  PB_RUS_A_State_Under_Construction2:0 "A State Under Construction"
-  PB_RUS_Gold_Mines:0 "Gold Mines"
-  PB_RUS_A_Navy_To_Match:0 "A Navy To Match"
-  PB_RUS_Russian_Tariffs:0 "Russian Tariffs"
-  PB_RUS_A_State_Under_Construction3:0 "The Strong State"
-  PB_RUS_Slavic_Diaspora:0 "The Slavic Diaspora" 
-  PB_RUS_Slavic_Diaspora2:0 "The Slavic Diaspora"
-  PB_RUS_German_Labour_Camps:0 "German Labour Camps"
-  PB_RUS_German_Labour_Camps2:0 "German Labour Camps"
-  PB_RUS_A_State_Under_Construction4:0 "The Police State"
-  PB_RUS_Absolute_Chaos:0 "Absolute Chaos"
+  PB_RUS_aftermath_of_the_nationalist_revolts:0 "Aftermath of the Nationalist Revolts"
+  PB_RUS_aftermath_of_the_nationalist_revolts_desc:0 ""
+  PB_RUS_the_purification_program:0 "The Purification Program"
+  PB_RUS_the_purification_program_desc:0 ""
+  PB_RUS_the_russian_miracle:0 "The Russian Miracle"
+  PB_RUS_the_russian_miracle_desc:0 ""
+  PB_RUS_rasputin_growing_heresy:0 "Rasputin's Growing Heresy"
+  PB_RUS_rasputin_growing_heresy_desc:0 ""
+  PB_RUS_kirill_discontent:0 "Grand Prince Kirill's Discontent"
+  PB_RUS_kirill_discontent_desc:0 ""
 
   ## Ideas For The Russian Collapse ##
 
