--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -22,22 +22,22 @@
   ##########################
   # NAMES
   ##########################
-  TUR_ni:0 "Ottoman Empire"
-  TUR_ni_DEF:0 "The Ottoman Empire"
+  TUR_ni:0 "Turkish State"
+  TUR_ni_DEF:0 "The Pan-Turkish State"
   TUR_ds:0 "Ottoman Empire"
   TUR_ds_DEF:0 "The Ottoman Empire"
   TUR_rc:0 "Ottoman Empire"
   TUR_rc_DEF:0 "The Ottoman Empire"
-  TUR_an:0 "Turkey"
-  TUR_an_DEF:0 "The Republic of Turkey"
+  TUR_an:0 "Ottoman Empire"
+  TUR_an_DEF:0 "The Ottoman Empire"
   TUR_cn:0 "Turkey"
   TUR_cn_DEF:0 "The Republic of Turkey"
   TUR_lb:0 "Turkey"
   TUR_lb_DEF:0 "The Republic of Turkey"
-  TUR_ss:0 "Ottoman Empire"
-  TUR_ss_DEF:0 "The Ottoman Empire"
-  TUR_jc:0 "Turkish Republic"
-  TUR_jc_DEF:0 "Turkish Republic"
+  TUR_ss:0 "Free Government of Turkey"
+  TUR_ss_DEF:0 "The Free Government of Turkey"
+  TUR_jc:0 "Ottoman Empire"
+  TUR_jc_DEF:0 "The Ottoman Empire"
   TUR_ni_ADJ:0 "Turkish"
   TUR_rc_ADJ:0 "Turkish"
   TUR_lb_ADJ:0 "Turkish"
@@ -46,30 +46,6 @@
   TUR_ds_ADJ:0 "Turkish"
   TUR_cn_ADJ:0 "Turkish"
   TUR_an_ADJ:0 "Turkish"
-  OTT_Loyalists_ni:0 "Ottoman Loyalists"
-  OTT_Loyalists_ni_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_ds:0 "Ottoman Loyalists"
-  OTT_Loyalists_ds_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_rc:0 "Ottoman Loyalists"
-  OTT_Loyalists_rc_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_an:0 "Ottoman Loyalists"
-  OTT_Loyalists_an_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_cn:0 "Ottoman Loyalists"
-  OTT_Loyalists_cn_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_lb:0 "Ottoman Loyalists"
-  OTT_Loyalists_lb_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_ss:0 "Ottoman Loyalists"
-  OTT_Loyalists_ss_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_jc:0 "Ottoman Loyalists"
-  OTT_Loyalists_jc_DEF:0 "The Ottoman Loyalists"
-  OTT_Loyalists_ni_ADJ:0 "Turkish"
-  OTT_Loyalists_rc_ADJ:0 "Turkish"
-  OTT_Loyalists_lb_ADJ:0 "Turkish"
-  OTT_Loyalists_ss_ADJ:0 "Turkish"
-  OTT_Loyalists_jc_ADJ:0 "Turkish"
-  OTT_Loyalists_ds_ADJ:0 "Turkish"
-  OTT_Loyalists_cn_ADJ:0 "Turkish"
-  OTT_Loyalists_an_ADJ:0 "Turkish"
 
   ##########################
   # MINISTERS
@@ -92,11 +68,27 @@
   PB_TUR_Iron_Fist_desc:0 "Marshal Ahmed Izzet Pasha and others like him have ruled Turkey for almost seventy years as demanded by our Russian overlords, whilst no saint the Marshal is one of the best collaborators the regime has seen in quite some time."
   PB_TUR_Caliph_of_Islam:0 "The 'Caliph' of Islam"
   PB_TUR_Caliph_of_Islam_desc:0 "Despite a myriad of social, economic and political problems, the Ottoman Caliph still remains the de-facto head of the Islamic faith. This legitimacy is one of the few sinews holding Turkish society together, however the Ottoman loss of the Islamic holy sites in Arabia was a massive blow to the religious legitimacy of the Caliph. It is not uncommon for many Muslims abroad to look to Istanbul for guidance, but many have begun to turn their attention towards those who hold Mecca, the Arabians."
+  PB_TUR_Treaty_of_Crimea_0:0 "The Treaty of Crimea"
+  PB_TUR_hidden_rearmament_0:0 "The Hidden Rearmament"
 
   ##########################
   # FOCUSES
   ##########################
   # Inital Tree
+  TUR_one_thousand_miles_to_freedom:0 "One Thousand miles to Freedom"
+  TUR_last_days_of_izzet_pasha:0 "The Last days of Izzet Pasha"
+  TUR_ottoman_remilitarisation:0 "The Ottoman Remilitarisation"
+  TUR_study_the_great_war:0 "Study The Great War"
+  TUR_deal_with_corruption:0 "Deal with Corruption"
+  TUR_ottoman_wonders:0 "The Ottoman Wonders"
+  TUR_wonder_of_greek_fire:0 "The Wonder of Greek Fire"
+  TUR_wonder_of_damascus_steel:0 "The Wonder of Damascus Steel"
+  TUR_focus_on_greek_fire:0 "Focus on Greek Fire"
+  TUR_focus_on_damascus_steel:0 "Focus on Damascus Steel"
+  TUR_ottoman_government:0 "The Ottoman Government"
+  TUR_ready_the_protege:0 "Ready the Protégé"
+  TUR_investigate_big_three:0 "Investigate The Big Three"
+  TUR_nine_hundred_ninety_nine_to_go:0 "Nine Hundred and Ninety Nine Miles to Go"
 
   ##########################
   # EVENTS
@@ -114,6 +106,8 @@
   ##########################
   # DECISIONS
   ##########################
+  PB_TUR_secret_rearmament_category:0 "The Secret Rearmament"
+  PB_TUR_secret_rearmament_category_desc:0 "For neigh seventy years §OTurkey§! has been under occupation and constant supervision from the §GRussians§!, but thanks to their increasingly careless attitude towards us following the Great War our leading scientists have rediscovered two lost inventions of man, §LGreek Fire and Damascus Steel§! these two hidden weapons has prompted the British to also send up support for our eventual uprising against the Russians.\n\nIt is imperative that we keep our Rearmament both effective and of course secret from the §GRussians§!, when the inevitable next great conflict arises in Europe we must be ready to fight against our former overlords, §Rno matter the cost.§!\n\n§GRussian Suspicions:§! [?TUR_russian_sus_variable]%\n§YRearmament of the Armed Forces:§! [?TUR_rearmament_armed_forces_variable]% \n§YRearmament of the Naval Forces:§! [?TUR_rearmament_naval_forces_variable]%\n§YRearmament of the Air Forces:§! [?TUR_rearmament_air_forces_variable]%\n§YRenewal of the Administration:§! [?TUR_renewal_administration_variable]%"
 
 
   ##########################
