SCA Super Event

--- a/localisation/PB_Super_Events_l_english.yml
+++ b/localisation/PB_Super_Events_l_english.yml
@@ -72,3 +72,6 @@
 
   SPEVNT_Chinese_Anarchy:0 "The Chinese Collapse"
   SPEVNT_Chinese_Anarchy_TEXT:0 "By nature, men are nearly alike; by practice, they get to be wide apart.\nVictory is reserved for those who are willing to pay its price."
+
+  SPEVNT_SCA_American_War:0 "The Exiles Return"
+  SPEVNT_SCA_American_War_TEXT:0 "From each according to his ability, to each according to his needs."
