when the Russian suspicions variable is sus!

--- a/localisation/PB_Turkey_l_english.yml
+++ b/localisation/PB_Turkey_l_english.yml
@@ -93,14 +93,26 @@
   ##########################
   # EVENTS
   ##########################
-
-
+  turkey_inital.1.t:0 "The Turkish Situation"
+  turkey_inital.1.d:0 "plz help"
+  turkey_inital.1.a:0 "Times are changing"
+  turkey_inital.2.t:0 "The Ailing Marshal" 
+  turkey_inital.2.d:0 "Damn bro he dying"
+  turkey_inital.2.a:0 "Let us make haste" 
+  turkey_inital.3.t:0 "Research Report: §LDamascus Steel & Greek Fire§!"
+  turkey_inital.3.d:0 "Science"
+  turkey_inital.3.a:0 "Things are starting to look up" 
   
   
 
   ##########################
   # TOOLTIPS
   ##########################
+  PB_TUR_russian_sus_add5_tt:0 "§GRussian Suspicions§! §Ywill increase by 5%§!"
+  PB_TUR_rearm_armed_forces_add5_tt:0 "§YOur Armed Forces will rearm by 5%§!"
+  PB_TUR_rearm_air_forces_add5_tt:0 "§YOur Air Forces will rearm by 5%§!"
+  PB_TUR_rearm_naval_forces_add5_tt:0 "§YOur Naval Forces will rearm by 5%§!"
+  PB_TUR_renew_administration_add5_tt:0 "§YOur Administration will improve by 5%§!"
   
 
   ##########################
