Policies and an extra starting nat spirit for russia

--- a/localisation/PB_Russia_l_english.yml
+++ b/localisation/PB_Russia_l_english.yml
@@ -33,6 +33,8 @@
   PB_RUS_rasputin_growing_heresy_desc:0 ""
   PB_RUS_kirill_discontent:0 "Grand Prince Kirill's Discontent"
   PB_RUS_kirill_discontent_desc:0 ""
+  PB_RUS_revenge_for_the_fallen:0 "Revenge for the Fallen"
+  PB_RUS_revenge_for_the_fallen_desc:0 ""
 
   ## Ideas For The Russian Collapse ##
 
