Constantinople not Istanbul

--- a/localisation/PB_state_names_l_english.yml
+++ b/localisation/PB_state_names_l_english.yml
@@ -339,7 +339,7 @@
  STATE_338:0 "Gloucestershire"
  STATE_339:0 "Izmir"
  STATE_340:0 "Bursa"
- STATE_341:0 "Istanbul"
+ STATE_341:0 "Constantinople"
  STATE_342:0 "Antalya"
  STATE_343:0 "Afyon"
  STATE_344:0 "Adana"
