--- a/localisation/PB_Cities_l_english.yml
+++ b/localisation/PB_Cities_l_english.yml
@@ -7,3 +7,9 @@
 VICTORY_POINTS_7453:0 "Heldstad"
 VICTORY_POINTS_8243:0 "Nieuw Antwerpen"
 VICTORY_POINTS_520:0 "Willem Fort"
+
+############
+# Russia/Russian Controlled
+############
+
+VICTORY_POINTS_9833:0 "Constantinople"
