--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -14,6 +14,13 @@
   # MINISTERS
   ##########################
 
+  ##########################
+  # Underground Cell Stuff
+  ##########################
+  
+  SCA_Create_Cell:0 "Create a §RJacobin Underground Cell§! in this state\n§W------------------------------------------------------------§!\nCost:  §g30§! £pol_power   and  §g1000§! £rifle_texticon"
+  SCA_Create_Exists:0 "A §RJacobin Underground Cell§! already exists in this state"
+
 
   ##########################
   # IDEAS
