--- a/localisation/PB_Hungary_l_english.yml
+++ b/localisation/PB_Hungary_l_english.yml
@@ -3,7 +3,12 @@
   ##########################
   # MINISTERS
   ##########################
-
+  
+  HUN_PB_Bohm_HOG:0 "Vilmos Böhm"
+  HUN_PB_Vago_IM:0 "Béla Vágó"
+  HUN_PB_Dezso_EM:0 "Dezső Bokányi"
+  HUN_PB_Garbai_FM:0 "Sándor Garbai"
+  HUN_PB_Rakosi:0 "Mátyás Rákosi"
 
   ##########################
   # IDEAS
@@ -14,3 +19,31 @@
   PB_HUN_Croatian_Support_desc:0 "The Great War's aftermath saw the Kingdom of the Dinaric, an artificial German protectorate, collapse into ethnic and political violence. Citing Hungary's claims on Croatia, the Hungarian Revolutionary Army moved in to openly support Croatian forces in the region in 1914. This saw the establishment of the Croatian People's Republic, a sister Republic to the one in Budapest and heavily reliant on local Hungarian advisors and economic support. A significant portion of our military is dedicated to supporting the Croatian forces, drawing some resources away from other sectors."
   PB_HUN_Balkan_Powderkeg:0 "The Balkan Powderkeg"
   PB_HUN_Balkan_Powderkeg_desc:0 "The Balkans have always been a region of conflict and the years since the war have seen the region descend into armed camps, mimicking the web of alliances prior to the larger global conflict. With a revanchist Romania and expansionist Serbia, revolutionary fervor in Bulgaria and the Dinarics having split, the Balkans are a single crisis away from exploding into general war. The coming conflict has been predicted by nearly every advisor in every Balkan capital, and thus a palpable sense of tension has overtaken the region. No one knows quite when the Great Balkan War will begin, but everyone is jockeying to be in a position to fire the first shot."
+
+  ##########
+  #Decisions
+  ##########
+
+  
+ #######################
+ # FOCUS
+ #######################
+
+
+ ##########################
+ # RELEASABLES
+ ##########################
+
+ ##########################
+  # EVENTS
+ ##########################
+
+ ##########################
+  # PARTIES
+ ##########################
+
+ ##########################
+  # Infoboxcountry
+ ##########################
+
+ HUN_Country_Desc_Topbar:0 "§YThe Common Republic of Hungary§! is the only §RRevolutionary Republic§! in continental Europe.\n\n§YThe Kingdom of Hungary§! gained independence as a nation in 1866, when the Austrian Empire unified Germany and gave its Non-German territories independence. However the independence was only nominal. Karl Ludwig of Habsburg would become the King of Hungary and maintain loyalty to the Habsburg family and subsequently to Germany. Hungary would continue to be an ally of Germany or rather in the eyes of the Hungarian people be a exploited puppet.\n\nThe Downfall of the Kingdom began with the outbreak of the §YGreat War§! in 1905 where the nation would immediatly join the Imperial Powers in their war against the Bourbons. The Hungarian People were dragged into a war they had no motivation or interest fighting in greatly increasing their dissent with the Royal Leadership. With Hungarian Soldiers being used as cannon fodder on the alpine front and the citiziens themself experiencing food shortages, the old Jacobine ideas born in 1790 would again gain support among the common people. In the end over 300 thousand soldiers would give their lives for the war effort and in the Treaty of Tours the Kingdom would only be awarded some small reperations as compensation. §RThe Spark was lit!§!\n\nThe following collapsing economy in 1911 would lead to bread riots which would escalate as Hungarian troops would fire on the protestors. From there on the situation rapidly escalated with Troops defecting on mass. §RThe Revolution§! had began, the Hungarian civil war between the Jacobin Revolutionaries and the German Backed Whites started. At the same time Romania would invade and steal Translyvanian territory. However despite these setback the Revolution would suceed under the guidance of Vilmos Böhm and the §YCommon Republic of Hungary§! would be declared on 6th March 1912. \n\nAfter 8 years of recovering the Hungarian Republic would declare war upon Romania trying to reclaim their lost territories. The war would be the most brutal one both countries had ever experienced and after 3 years of gruesome fighting the Great Powers of Europe forced a peace. Hungary reclaimed the majority of its former Translyvanian States and would be seen as the victor. However its following and current problems would be internally. Ethnic tension in Slovakia and the Slavic border regions begin to cause issues, the ruling party §RForradalmi Tanács§! is splitting into two conflicting branches, the §YReformists§! and §YVanguardists§! and lastly the hero of the revolution Vilmos Böhm is losing his shine and motivation to rule this nation. On top of all of this, the is a feeling in the air that the Balkan is soon reaching its §R"Boiling Point"§!."
