Hungarian Ideas and Cities Added
- Ideas
- Cities
- factories
- modifier for the bastard rakosi changed

--- a/localisation/PB_Hungary_l_english.yml
+++ b/localisation/PB_Hungary_l_english.yml
@@ -20,6 +20,12 @@
   PB_HUN_Balkan_Powderkeg:0 "The Balkan Powderkeg"
   PB_HUN_Balkan_Powderkeg_desc:0 "The Balkans have always been a region of conflict and the years since the war have seen the region descend into armed camps, mimicking the web of alliances prior to the larger global conflict. With a revanchist Romania and expansionist Serbia, revolutionary fervor in Bulgaria and the Dinarics having split, the Balkans are a single crisis away from exploding into general war. The coming conflict has been predicted by nearly every advisor in every Balkan capital, and thus a palpable sense of tension has overtaken the region. No one knows quite when the Great Balkan War will begin, but everyone is jockeying to be in a position to fire the first shot."
 
+  PB_HUN_Collapsing_Government:0 "Collapsing Government"
+  PB_HUN_Collapsing_Government_desc:0 "The Government of Vilmos Böhm is beginning to crack. Böhm has led the young republic through its destabilizing crises and greatest pinnacles,but it appears his time is coming to an end. The two main branches of the Forradalmi Tanacs (FT) the Reformists and Vanguardists are more and more unable to peacefully work together with each other. Vilmos efforts of the last 13 years to unite the two branches do not seem to bear any fruits any more. Vilmos is becoming more and more tired of politics. For 13 Years he has led the young republic but now it maybe needs a new direction."
+
+  PB_HUN_Ethnic_Tensions:0 "Ethnic Tensions"
+  PB_HUN_Ethnic_Tensions_desc:0 "It feels like the Republic is threatened by all sides even from the inside. In recent years the Non-Hungarian Groups in the Republic have become more and more unruly. Enemy Spies are catched stirring up Anti-Hungarian Propaganda, weapons are smuggled over the borders and the children do not sing the anthem properly anymore. Especially in Slovakia the situation is growing out of control. It seems like the Magyarization Policies towards the Slovaks might dangerously backfire."
+  
   ##########
   #Decisions
   ##########
