--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -38,11 +38,11 @@
  VICTORY_POINTS_11542:0 "Prague"
  VICTORY_POINTS_3569:0 "Brno"
  VICTORY_POINTS_6418:0 "Plzen"
- VICTORY_POINTS_6573:0 "Kaschau"
- VICTORY_POINTS_9692:0 "Pressburg"
+ VICTORY_POINTS_6573:0 "Kassa"
+ VICTORY_POINTS_9692:0 "Pozsony"
  VICTORY_POINTS_9660:0 "Budapest"
- VICTORY_POINTS_11610:0 "Fünfkirchen"
- VICTORY_POINTS_11659:0 "Debrezin"
+ VICTORY_POINTS_11610:0 "Pecs"
+ VICTORY_POINTS_11659:0 "Debrecen"
  VICTORY_POINTS_391:0 "Amsterdam"
  VICTORY_POINTS_3211:0 "The Hague"
  VICTORY_POINTS_9498:0 "Rotterdam"
@@ -99,7 +99,11 @@
  VICTORY_POINTS_690:0 "Kronstadt"
  VICTORY_POINTS_3663:0 "Ploiesti"
  VICTORY_POINTS_6682:0 "Arad"
- VICTORY_POINTS_6711:0 "Klausenberg"
+ VICTORY_POINTS_9606:0 "Temesvár"
+ VICTORY_POINTS_6700:0 "Szeged"
+ VICTORY_POINTS_701:0 "Veszprém"
+ VICTORY_POINTS_9661:0 "Sopron"
+ VICTORY_POINTS_6711:0 "Kolozsvár"
  VICTORY_POINTS_9716:0 "Iasi"
  VICTORY_POINTS_9914:0 "Tirana"
  VICTORY_POINTS_4109:0 "Athens"
