--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -18,8 +18,12 @@
   # Underground Cell Stuff
   ##########################
   
-  SCA_Create_Cell:0 "Create a §RJacobin Underground Cell§! in this state\n§W------------------------------------------------------------§!\nCost:  §g30§! £pol_power   and  §g1000§! £rifle_texticon"
+  SCA_Create_Cell:0 "Create a §RJacobin Underground Cell§! in this state\n§W------------------------------------------------------------§!\nCost:  §g35§! £pol_power   and  §g1000§! £rifle_texticon"
   SCA_Create_Exists:0 "A §RJacobin Underground Cell§! already exists in this state"
+
+  PB_SCA_The_Second_Revolution:0 "The Second Revolution"
+  PB_SCA_The_Second_Revolution_desc:0 "\n\n\n\n\n\n                             Number of Cells in the United Commonwealth:  §Y[?SCA_NO_OF_CELLS]§!"
+  SCA_Soon_To_Come:0 "Soon To Come"
 
 
   ##########################
