--- a/localisation/PB_SCA_l_english.yml
+++ b/localisation/PB_SCA_l_english.yml
@@ -22,8 +22,9 @@
   SCA_Create_Exists:0 "A §RJacobin Underground Cell§! already exists in this state"
 
   PB_SCA_The_Second_Revolution:0 "The Second Revolution"
-  PB_SCA_The_Second_Revolution_desc:0 "\n\n\n\n\n\n                             Number of Cells in the United Commonwealth:  §Y[?SCA_NO_OF_CELLS]§!"
+  PB_SCA_The_Second_Revolution_desc:0 "\n\n\n\n\n\nNumber of Cells in the United Commonwealth:  §Y[?SCA_NO_OF_CELLS]§!\n§W-----------------------------------------------------------------------§!\n\nCan you hear it? The marching of men and women across these western lands. It is the United Commonwealth that forced our hand, and it is them that will bear our fist. We have struggled greatly with our survival, any threat, internal or external, will be removed. Ripped out without thought, like a cancer that threatens our very existance. That cancer, that tumor that refuses to die, the UC, will pay for what they did. And pain is all they will know.\n\n§RThe greatest showdown in human history is to occur and we will be its victors§!\n\n§RDeath to the Commonwealth!§!\n§W-------------------------------------------§!\n\n§YUnderground Cell Mechanic Tutorial§!:\n\nUnderground Cells can be created in every core state in the United Commonwealth. Clicking on a state will bring up a scripted GUI button that is if you have the following parameters: You have §g35§! £pol_power   and  §g1000§! £rifle_texticon. Not having so will make the button unavailable. if you have said paramters and you click the button then a Underground Cell will be created and on the outset of the war a militia division will spawn in that specific state. You have Approx. Four months to create these Underground Cells and in general prepare. Goodluck Solider, you'll need it. P.S. One final thing you do not have to capitulate the entire British Empire only the United Commonwealth. Doing so will fire a scripted peace deal.\n"
   SCA_Soon_To_Come:0 "Soon To Come"
+  SCA_Soon_To_Come_desc:0 "This is it, what we have been preparing for during our time in exile. Never would we have imagined the extent of our successes. Never would we have thought to see the day the UC would fear us."
 
 
   ##########################
@@ -700,6 +701,8 @@
 
   SCA_Pacific_Union:0 "Pacific Union"
 
+  SCA_Red_America:0 "Revolutionary America"
+
   PB_Struggling_Dogs:0 "Struggling Dogs"
   PB_Sons_Of_Abraham:0 "Sons Of Abraham"
   PB_Building_A_Red_Utopia:0 "Building A Red Utopia"
@@ -810,29 +813,32 @@
   SCA26title:0 "Mexico Refuses"
   SCA26desc:0 "" 
   SCA26opta:0 "What!"
-  SCA27title:0 "The Sounds Of War"
+  SCA27title:0 "The Sounds Of War" # - This loc is being done by someone else
   SCA27desc:0 "" 
   SCA27opta:0 "The Dead March West"
   SCA28title:0 "California Burns"
-  SCA28desc:0 "" 
+  SCA28desc:0 "The proletariat has succeded in spreading the revolution to California, but at a major price.\n\nMany californians did not see eye to eye with our glorious cause, and held out against our forces valiantly. Eventually the proletariat realized that their salvation was at hand, and assisted our liberation of Sacramento.\n\nThe result of all of the fighting has led to the previous harmony being disrupted. The city itself burns with the scars of broken harmony.\n\nHowever, we cannot mourn the fallen. With our red wave soaking over all unclaimed and disparate nations of the west, we finally have enough strength, land and resources to finish what we started so many years ago.\n\nChairman Smedley Butler marched through the city with his elite forces towards the city square where he eventually held a speech to the few soldiers and citizens remained.\n\n'Workers of California, rejoice! The unstoppable revolution has liberated you from the capitalists who oppressed you. You are now part of something greater, a movement that will unite the entirety of america's workers and destroy imperialism worldwide. We may have failed in our initial revolution, but we will not fail again!" 
   SCA28opta:0 "Now We March East"
   SCA29title:0 "The Next Steps"
   SCA29desc:0 "" 
   SCA29opta:0 "Do Not Rest Easy"
-  SCA30title:0 "Jacobin Unrest"
+  SCA30title:0 "Jacobin Unrest" # - This loc is being done by someone else
   SCA30desc:0 "" 
   SCA30opta:0 "Hunt Down These Thugs"
-  SCA31title:0 "A Friend Across The Pacific"
+  SCA31title:0 "A Friend Across The Pacific" # - This loc is being done by someone else
   SCA31desc:0 "" 
   SCA31opta:0 "We Welcome Our American Friends"
   SCA32title:0 "Reports From Mitsi Adazi"
   SCA32desc:0 "" 
   SCA32opta:0 "Kill Them Once And For All"
-  SCA33title:0 "A New Capital?"
+  SCA33title:0 "A New Capital?" # - This loc is being done by someone else
   SCA33desc:0 "" 
   SCA33opta:0 "San Francisco Looks Nice This Time Of The Year"
   SCA33optb:0 "A New Life In Los Angeles"
   SCA33optc:0 "Mitsi Adazi Is Our Home"
+  SCA34title:0 "A Red America"
+  SCA34desc:0 "" 
+  SCA34opta:0 "We Fucking Did It"
 
 
 
